src/test/ui/issues/issue-17959.stderr
error[E0367]: The requirement `T: std::marker::Sized` is added only by the Drop impl.
  --> $DIR/issue-17959.rs:11:1
   |
LL | / impl<T> Drop for G<T> {
LL | |
LL | |     fn drop(&mut self) {
LL | |         if !self._ptr.is_null() {
LL | |         }
LL | |     }
LL | | }
   | |_^
   |
note: The same requirement must be part of the struct/enum definition
  --> $DIR/issue-17959.rs:7:1
   |
LL | / struct G<T: ?Sized> {
LL | |     _ptr: *const T
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0367`.
